@@ -31,15 +31,20 @@ def skip_if_not_installed():
 
 def test_xdoc_console_script_location():
     skip_if_not_installed()
-    path = os.path.realpath(sys.argv[0])
-    print('path = {!r}'.format(path))
-
-    site_packages = os.path.dirname(path)
-    print('site_packages = {!r}'.format(site_packages))
-    print(os.listdir(site_packages))
 
     if sys.platform.startswith('win32'):
-        info = cmd('where xdoctest.bat')
+        path = os.path.realpath(sys.argv[0])
+        print('path = {!r}'.format(path))
+        site_packages = os.path.dirname(path)
+        print('site_packages = {!r}'.format(site_packages))
+        print(os.listdir(site_packages))
+        pythondir = os.path.dirname(os.path.dirname(site_packages))
+        scriptdir = os.path.join(pythondir, 'Scripts')
+        print('pythondir = {!r}'.format(pythondir))
+        print('scriptdir = {!r}'.format(scriptdir))
+        print(os.listdir(scriptdir))
+
+        info = cmd('where xdoctest')
     else:
         info = cmd('which xdoctest')
     print('info = {!r}'.format(info))
@@ -54,15 +59,20 @@ def test_xdoc_console_script_location():
 
 def test_xdoc_console_script_exec():
     skip_if_not_installed()
-    path = os.path.realpath(sys.argv[0])
-    print('path = {!r}'.format(path))
-
-    site_packages = os.path.dirname(path)
-    print('site_packages = {!r}'.format(site_packages))
-    print(os.listdir(site_packages))
 
     if sys.platform.startswith('win32'):
-        info = cmd('xdoctest.bat')
+        path = os.path.realpath(sys.argv[0])
+        print('path = {!r}'.format(path))
+        site_packages = os.path.dirname(path)
+        print('site_packages = {!r}'.format(site_packages))
+        print(os.listdir(site_packages))
+        pythondir = os.path.dirname(os.path.dirname(site_packages))
+        scriptdir = os.path.join(pythondir, 'Scripts')
+        print('pythondir = {!r}'.format(pythondir))
+        print('scriptdir = {!r}'.format(scriptdir))
+        print(os.listdir(scriptdir))
+
+        info = cmd('xdoctest')
     else:
         info = cmd('xdoctest')
     print('info = {!r}'.format(info))
